# ship-llm

./: .gitignore  LICENSE  README.md  ai.py  ai_test.py  benchmark_results.json  pyproject.toml  requirements.txt  setup.py
.zed/: settings.json
hurry_ai/: __init__.py  ai.py
ship_llm/: __init__.py  ai.py  cache.py  clients.py  decorators.py  models.py  stream.py  utils.py
tests/: ai_test.py  benchmark_test.py
