[tool.poetry]
name = "ship-llm"
version = "0.0.10"
description = "Ship LLM: Ship Fast, Ship Now - Clean LLM Interface for Rapid Deployment"
authors = ["Thoriq Akbar <thoriqakbar00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
instructor = "*"
openai = "*"
pydantic = "*"
requests = "^2.32.3"
pillow = "^10.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
